Update project configuration for test coverage analyse
Define surefire plugin configuration

Use the 0.8.4 version of the Jacoco plugin